--- a/src/UrbanAirSharp/UrbanAirSharp.NetStandard.csproj
+++ b/src/UrbanAirSharp/UrbanAirSharp.NetStandard.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
